ecmascript/parser/tests/test262-error-references/fail/211656c4eaff2d9c.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/211656c4eaff2d9c.js:2:1
  |
2 | => 0
  | ^^

